Changing to one column - still working

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="col-lg-12 col-md-12 col-sm-12">
       <label>Voltages:</label>
-      <canvas id="bar" class="chart chart-bar" data="voltages" labels="voltageLabels"></canvas>
+      <canvas id="bar" class="chart chart-bar" options="{barValueSpacing:1, barStrokeWidth:2, scaleOverride: true, scaleSteps: 10, scaleStepWidth:1, scaleStartValue:0, scaleIntegersOnly:false, animationSteps:10}" data="voltages" labels="voltageLabels"></canvas>
       <div class="row">
         <div class="col-lg-12 col-md-12 col-sm-12">
           <label>Voltages:</label>
