--- a/app/views/main.html
+++ b/app/views/main.html
@@ -3,7 +3,7 @@
     <div class="col-lg-12 col-md-12 col-sm-12">
       <label>Voltages:</label>
       <canvas id="bar" class="chart chart-bar" 
-      options="{barValueSpacing:1, barStrokeWidth:2, scaleOverride: false, animationSteps:10}"
+      options="{barValueSpacing:1, barStrokeWidth:2, scaleOverride: false, scaleIntegersOnly:false, animationSteps:10}"
       data="voltages" labels="voltageLabels"></canvas>
       <div class="row">
         <div class="col-lg-12 col-md-12 col-sm-12">
