--- a/app/views/main.html
+++ b/app/views/main.html
@@ -3,6 +3,7 @@
     <div class="col-lg-12 col-md-12 col-sm-12">
       <label>Voltages:</label>
       <canvas id="bar" class="chart chart-bar" 
+      options="{scaleIntegersOnly:false}"
       data="voltages" labels="voltageLabels"></canvas>
       <div class="row">
         <div class="col-lg-12 col-md-12 col-sm-12">
